2023-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): Validate the number of
	-random-threshold arguments.  Addresses SourceForge issue #700
	Segmentation Violation in gm (magick/utility.c:3399 in
	LocaleCompare)".

	* magick/montage.c (MontageImages): Report exception if tile
	geometry component is zero. Addresses SourceForge issue #699
	"Floating Point Exception in gm (magick/montage.c:514 in
	MontageImages)".

2023-05-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/transform.c (ChopImage): Assure that chop image has valid
	dimensions.  Addresses SourceForge issue #697 "Assertion
	`image->columns != 0' failed in gm (RollImage at
	magick/transform.c:1532)" and issue #698 "Assertion `image->rows
	!= 0' failed (magick/transform.c:1533 at RollImage)".

2023-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Require that TIFFTAG_EXTRASAMPLES
	be used appropriately to indicate the intention of extra channels.
	Otherwise extra samples beyond what is required by the photometric
	will be ignored.

2023-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Stop promoting RGB image to
	associated alpha due to 4 channels until a solution is found which
	does not cause issues.

2023-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Automate the collection of TIFF
	attributes. Fixes oss-fuzz issue 58754
	"graphicsmagick:coder_BIGTIFF_fuzzer: Stack-buffer-overflow in
	_TIFFVGetField" and 58758 "graphicsmagick:coder_PTIF_fuzzer:
	Stack-buffer-overflow in _TIFFVGetField" which occur with the
	development version of libtiff.

2023-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (RegisterTIFFImage): Provide a note regarding
	supported compressions for this libtiff build.

	* utilities/tests/gen-tiff-images/genimages: Add support for