@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230602"
-#define public MagickPackageReleaseDate "snapshot-20230602"
+#define public MagickPackageVersionAddendum ".020230603"
+#define public MagickPackageReleaseDate "snapshot-20230603"
